# crxsnake

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: release.yaml
crxsnake/: __init__.py  cogs.py  database.py  embed.py  files.py  logger.py  misc.py  readers.py  tortoise.py
crxsnake/issues/: crx.py  hotline.py
crxsnake/utils/: convert.py  crx.py  embed_log.py  hotline.py  misc.py  steam.py
crxsnake/utils/dayz/: convert.py  hotline.py
crxsnake/utils/discord/: cogs.py  colors.py  embed.py  parse.py
crxsnake/web/: request.py
src/crxsnake/: __init__.py  files.py
src/crxsnake/issues/: hotline.py
