[project]
name = "crxsnake"
version = "1.4.9"
description = "A set of my project creation utilities"
authors = [
    {name="CYRAX", email="cherniq66@gmail.com"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "tortoise-orm (>=0.24.0,<0.25.0)",
    "disnake (>=2.10.1,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
